--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,27 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
 
 $gray-medium-light: #eaeaea;
+$gray-medium: #ababab;
+
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
 
 /* MAIN */
+
+.container {
+  margin-left: 135px
+}
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
+
+.quiet {
+  color: $gray-medium;
+}
 
 body {
   padding-top: 60px;
@@ -17,13 +35,27 @@ textarea {
   resize: vertical;
 }
 
-.center {
-  text-align: center;
-  h1 {
-    margin-bottom: 10px;
+.label, .badge  {
+  a, a:hover, a:focus {
+    color: #fff;
+    text-decoration: none;
   }
 }
 
+div.comment_votes {
+  padding: 10px;
+}
+
+.field_with_errors label {
+  color: #dc3545;
+}
+
+.field_with_errors input,
+.field_with_errors textarea {
+  border-color: #dc3545;
+}
+
+/* typography */
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
@@ -49,22 +81,42 @@ p {
   line-height: 1.7em;
 }
 
-
 /* header */
-
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: white;
+  color: $gray-medium-light;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   &:hover {
-    color: white;
+    color: $gray-medium-light;
     text-decoration: none;
   }
+}
+
+.navbar .nav > li > a.brand {
+  padding-left: 0px;
+}
+
+div.nav_item {
+  margin-left: 25px;
+  float: left;
+}
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
 }
 
 /* footer */
@@ -89,6 +141,24 @@ footer {
     li {
       float: left;
       margin-left: 15px;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  footer {
+    small {
+      display: block;
+      float: none;
+      margin-bottom: 1em;
+    }
+    ul {
+      float: none;
+      padding: 0;
+      li {
+        float: none;
+        margin-left: 0;
+      }
     }
   }
 }
