--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,16 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
-      <%= render 'layouts/messages' %>
-      <%= yield %>
-      <%= render 'layouts/footer' %>
+    <div id="main" role="main">
+      <div class="container">
+        <div class="row">
+          <div class="span12">
+            <%= render 'layouts/messages' %>
+            <%= yield %>
+          </div>
+        </div>
+        <%= render 'layouts/footer' %>
+      </div>
     </div>
   </body>
 </html>
