--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <% show_post ||= false %>
 
 <div class='row'>
-  <div class="span0 well text-center">
+  <div class="col-md-1 well text-center">
     <% if logged_in? %>
       <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: 'post' do %>
         <i class="icon-arrow-up"></i>
@@ -16,7 +16,7 @@
       <% end %>
     <% end %>
   </div>
-  <div class='well span8'>
+  <div class='col-md-8 well'>
     <em>"<%= comment.body %>"</em>
     <% if show_post %>
       on <%= link_to comment.post.title, post_path(comment.post) %>
