--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,69 +1,68 @@
-<header>
-  <div class="navbar">
-    <div class="navbar-inner">
-      <div class="container">
-        <%= link_to "Post_it", root_path, id: "logo" %>
+<%= link_to "Post_it", root_path, id: "logo" %>
 
-        <div class="btn-group nav_item">
-          <%= link_to "#", class: "btn btn-small dropdown-toggle", "data-toggle" => "dropdown" do %>
-            Categories <span class="caret"></span>
-          <% end %>
-          <ul class="dropdown-menu">
-            <% Category.all.each do |category| %>
-              <li>
-                <%= link_to category.name, category_path(category) %>
-              </li>
-            <% end %>
-          </ul>
-          <% if logged_in? %>
-            <li class="divider"></li>
-            <li>
-              <%= link_to(new_category_path) do %>
-                <i class="icon-plus"></i>
-                New Category
-              <% end %>
-            </li>
-          <% end %>
-        </div>
-        <% if logged_in? %>
-          <div class="nav_item">
-            <%= link_to "New Post", new_post_path, class: "btn btn-primary btn-small" %>
-          </div>
-          <div class="btn-group nav_item">
-            <%= link_to("", class:"btn btn-small dropdown-toggle", "data-toggle" => "dropdown") do %>
-              <%= current_user.username %>
-              <span class="caret"></span>
-            <% end %>
-            <ul class="dropdown-menu">
-              <li>
-                <%= link_to edit_user_path(current_user) do %>
-                  <i class="icon-pencil"></i>
-                  edit profile
-                <% end %>
-              </li>
-              <li>
-                <%= link_to user_path(current_user) do %>
-                  <i class="icon-user"></i>
-                  view profile
-                <% end %>
-              </li>
-              <li>
-                <%= link_to logout_path do %>
-                  <i class="icon-circle-arrow-left"></i>
-                  logout
-                <% end %>
-              </li>
-            </ul>
-          </div>
-        <% else %>
-          <div class="nav_item">
-            <%= link_to "Register", register_path, class: "btn btn-primary btn-small" %>
-          </div>
-          <div class="nav_item">
-            <%= link_to "Log In", login_path, class: "btn btn-small" %>
-          </div>
+<div class="btn-group nav_item">
+  <!--
+  <%= link_to "#", class: "btn dropdown-toggle", "data-toggle" => "dropdown" do %>
+    Categories <span class="caret"></span>
+  <% end %>
+  -->
+  
+  <a class="btn dropdown-toggle" data-toggle="dropdown">
+    Categories <span class="caret"></span>
+  </a>
+
+  <ul class="dropdown-menu">
+    <% Category.all.each do |category| %>
+      <li>
+        <%= link_to category.name, category_path(category) %>
+      </li>
+    <% end %>
+    <% if logged_in? %>
+      <li class="divider"></li>
+      <li>
+        <%= link_to(new_category_path) do %>
+          <i class="icon-plus"></i>
+          New Category
         <% end %>
-      </div>
-    </div>
+      </li>
+    <% end %>
+  </ul>
+</div>
+<% if logged_in? %>
+  <div class="nav_item">
+    <%= link_to "New Post", new_post_path, class: "btn btn-primary btn-small" %>
   </div>
-</header>
+  <div class="btn-group nav_item">
+    <%= link_to("", class:"btn btn-small dropdown-toggle", "data-toggle" => "dropdown") do %>
+      <%= current_user.username %>
+      <span class="caret"></span>
+    <% end %>
+    <ul class="dropdown-menu">
+      <li>
+        <%= link_to edit_user_path(current_user) do %>
+          <i class="icon-pencil"></i>
+          edit profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to user_path(current_user) do %>
+          <i class="icon-user"></i>
+          view profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to logout_path do %>
+          <i class="icon-circle-arrow-left"></i>
+          logout
+        <% end %>
+      </li>
+    </ul>
+  </div>
+<% else %>
+  <div class="nav_item">
+    <%= link_to "Register", register_path, class: "btn btn-primary btn-small" %>
+  </div>
+  <div class="nav_item">
+    <%= link_to "Log In", login_path, class: "btn btn-small" %>
+  </div>
+<% end %>
