--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
+    <header>
+      <div class="navbar">
+        <div class="navbar-inner">
+          <div class="container">
+            <%= render 'layouts/header' %>
+          </div>
+        </div>
+      </div>
+    </header>
     <div id="main" role="main">
       <div class="container">
         <div class="row">
