--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/errors', record: @post %>
 
-<div class='well'>
+<div class='col-md-8 well'>
   <%= form_for @post do |f| %>
     <div class='control-group'>
       <%= f.label :title %>
