--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span0 well text-center">
+  <div class="col-md-1 well text-center">
     <% if logged_in? %>
       <%= link_to vote_post_path(post, vote: true), method: 'post' do %>
         <i class="icon-arrow-up"></i>
@@ -14,7 +14,7 @@
       <% end %>
     <% end %>
   </div>
-  <div class="span8 well">
+  <div class="col-md-8 well">
     <%= render post.categories %>
     <h4><%= link_to post.title, fix_url(post.url) %></h4>
     <p><%= post.description %></p>
