--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,9 @@
 <%= link_to "Post_it", root_path, id: "logo" %>
 
-<div class="btn-group nav_item">
-  <!--
-  <%= link_to "#", class: "btn dropdown-toggle", "data-toggle" => "dropdown" do %>
-    Categories <span class="caret"></span>
-  <% end %>
-  -->
-  
-  <a class="btn dropdown-toggle" data-toggle="dropdown">
-    Categories <span class="caret"></span>
-  </a>
+<div class="btn-group nav_item"> 
+  <button class="btn dropdown-toggle" data-toggle="dropdown">Categories
+    <span class="caret"></span>
+  </button>
 
   <ul class="dropdown-menu">
     <% Category.all.each do |category| %>
@@ -28,15 +22,16 @@
     <% end %>
   </ul>
 </div>
+
 <% if logged_in? %>
   <div class="nav_item">
     <%= link_to "New Post", new_post_path, class: "btn btn-primary btn-small" %>
   </div>
   <div class="btn-group nav_item">
-    <%= link_to("", class:"btn btn-small dropdown-toggle", "data-toggle" => "dropdown") do %>
+    <button class="btn dropdown-toggle" data-toggle="dropdown">
       <%= current_user.username %>
       <span class="caret"></span>
-    <% end %>
+    </button>
     <ul class="dropdown-menu">
       <li>
         <%= link_to edit_user_path(current_user) do %>
@@ -63,6 +58,6 @@
     <%= link_to "Register", register_path, class: "btn btn-primary btn-small" %>
   </div>
   <div class="nav_item">
-    <%= link_to "Log In", login_path, class: "btn btn-small" %>
+    <%= link_to "Log In", login_path, class: "btn btn-light" %>
   </div>
 <% end %>
