--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-<% header = link_to('All Posts', posts_path) + " #{header} »; #{@category.name}".html_safe %>
+<% header = link_to('All Posts', posts_path) + " #{header} » #{@category.name}".html_safe %>
 <%= render 'shared/content_title', title: header %>
 
 <% @category.posts.each do |post| %>
