--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-1 well text-center">
     <% if logged_in? %>
       <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: 'post' do %>
-        <i class="icon-arrow-up"></i>
+        <i class="icon-arrow-up">&#8593</i>
       <% end %>
       <br/>
     <% end %>
@@ -12,7 +12,7 @@
     <% if logged_in? %>
       <br/>
       <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: 'post' do %>
-        <i class="icon-arrow-down"></i>
+        <i class="icon-arrow-down">&#8595</i>
       <% end %>
     <% end %>
   </div>
