--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,7 +55,7 @@
   </div>
 <% else %>
   <div class="nav_item">
-    <%= link_to "Register", register_path, class: "btn btn-primary btn-small" %>
+    <%= link_to "Register", register_path, class: "btn btn-primary" %>
   </div>
   <div class="nav_item">
     <%= link_to "Log In", login_path, class: "btn btn-light" %>
